@@ -251,6 +251,7 @@ BScreen::ScreenResource::ScreenResource(FbTk::ResourceManager &rm,
                            scrname+".sloppywindowgrouping", altscrname+".SloppyWindowGrouping"),
     workspace_warping(rm, true, scrname+".workspacewarping", altscrname+".WorkspaceWarping"),
     desktop_wheeling(rm, true, scrname+".desktopwheeling", altscrname+".DesktopWheeling"),
+    reverse_wheeling(rm, false, scrname+".reversewheeling", altscrname+".ReverseWheeling"),
     show_window_pos(rm, true, scrname+".showwindowposition", altscrname+".ShowWindowPosition"),
     antialias(rm, false, scrname+".antialias", altscrname+".Antialias"),
     auto_raise(rm, false, scrname+".autoRaise", altscrname+".AutoRaise"),
